delete history fix overflowing text

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ div {
     background-color: rgb(70, 70, 70);
     height: auto;
     width: 500px;
-    margin-top: 100px;
+    margin-top: 200px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -69,18 +69,15 @@ div {
 #del {
     width: 220px;
 }
-.prev {
-    font-size: 20px;
-    margin: 15px;
-    color: rgb(24, 24, 24);
-    font-family: 'Share Tech Mono', monospace;
-}
+
 .total {
     font-size: 42px;
     margin-right: 15px;
     margin-left: 15px;
     color: rgb(24, 24, 24);
     font-family: 'Share Tech Mono', monospace;
-    flex-wrap: wrap; 
+    flex-wrap: wrap-reverse; 
     word-wrap: break-word;
+    flex-grow: 1;
+    height: auto;
 }
